# django-cms-uv

./: .gitignore  01_QUICKSTART.md  02_CONFIGURATION.md  03_USER_GROUPS_SETUP.md  04_BLOG_SETUP.md  04_NEWS_SETUP.md  05_Dev_Processes_localhost.md  06_directory_adjust.md  07_SETUP_COMPLETE.md  08_ENHANCEMENT_SUMMARY.md  10_Permissions.md  ACCESS-CI-HEADER-FOOTER-INTEGRATION.md  Dev_Processes_localhost.md  ENHANCEMENT_SUMMARY.md  QUICKSTART.md  README.md  RENAME_SUMMARY.md  USER_GROUPS_SETUP.md  django-cms-settingspy.txt  headers_footers_etc.txt  portalcms.conf.j2  pyproject.toml  sqlite_to_postgres.txt
Operations_PortalCMS_Django/: .env.example  CONFIGURATION.md  SETUP_COMPLETE.md  config.prod.json.template  manage.py  portalcms.conf.json  portalcsm.conf.json
Operations_PortalCMS_Django/operations_portalcms_django/: admin.py  app_urls.py  asgi.py  cms_plugins.py  forms.py  models.py  settings.py  urls.py  views.py  wsgi.py
Operations_PortalCMS_Django/operations_portalcms_django/migrations/: 0001_initial.py  0002_rename_news_models.py  0003_remove_accessnews_model.py  0004_integrationnewsitemplugin_systemstatusnewsitemplugin.py  0005_alter_integrationnews_table_and_more.py  0006_alter_systemstatusnews_options_and_more.py
Operations_PortalCMS_Django/static/operations_portalcms_django/: style-portalcms.css  style-serviceindex.css
Operations_PortalCMS_Django/templates/: base.html  feature.html  focus_area.html  infrastructure.html  menu.html  page.html
Operations_PortalCMS_Django/templates/account/: logout.html
Operations_PortalCMS_Django/templates/operations_portalcms_django/: access_allocated.html  add_infrastructure_news.html  add_integration_news.html  add_system_status_news.html  index.html  infrastructure_news.html  integration_news.html  system_status_news.html  update_infrastructure_news.html  update_integration_news.html  update_system_status_news.html
Operations_PortalCMS_Django/templates/socialaccount/: login.html
Operations_PortalCMS_Django/templates/web/: base_nav_full.html  base_nav_none.html  bootstrap.html  unprivileged.html
djangocmsjoy/: manage.py
djangocmsjoy/djangocmsjoy/: admin.py  app_urls.py  asgi.py  cms_plugins.py  models.py  settings.py  urls.py  views.py  wsgi.py
djangocmsjoy/djangocmsjoy/migrations/: 0002_rename_news_models.py  0003_remove_accessnews_model.py  (+1 more)
djangocmsjoy/templates/: base.html  blog.html  feature.html  page.html
(+23 files in other folders)
