[project]
name = "djangocmsjoy"
version = "0.1.0"
description = "Django CMS Joy Development Project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2,<5.3",
    "django-cms>=5.0,<5.1",
    "djangocms-admin-style>=3.3",
    "djangocms-text-ckeditor>=5.1.0",
    "djangocms-blog>=2.0.0",
    "djangocms-picture>=4.0.0",
    "djangocms-file>=3.0.0",
    "djangocms-link>=3.1.0",
    "djangocms-video>=3.0.0",
    "django-filer>=3.1.0",
    "easy-thumbnails>=2.8.0",
    "django-taggit>=5.0.0",
    "django-mptt>=0.14.0",
    "requests>=2.32.0",
    "djangorestframework>=3.15.0",
    "gunicorn>=23.0,<24",
    "django-bootstrap5>=25.0,<26",
    "django-allauth[socialaccount]>=65.0,<66",
    "psycopg2-binary>=2.9",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["djangocmsjoy"]
