[project]
name = "portalcms"
version = "0.1.0"
description = "Django CMS Development Project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2,<5.3",
    "django-cms>=5.0,<5.1",
    "djangocms-admin-style>=3.3",
    "djangocms-text-ckeditor>=5.1.0",
    "djangocms-picture>=4.0.0",
    "djangocms-file>=3.0.0",
    "djangocms-link>=3.1.0",
    "djangocms-video>=3.0.0",
    "django-filer>=3.1.0",
    "easy-thumbnails>=2.8.0",
    "requests>=2.32.0",
    "djangorestframework>=3.15.0",
    "gunicorn>=23.0,<24",
    "django-bootstrap5>=25.0,<26",
    "django-allauth[socialaccount]>=65.0,<66",
    "psycopg2-binary>=2.9",
    "access-django-user-admin==1.5.3",
    "python-dotenv>=1.0.0",
]
